# poetry_django

./: .flake8  main.py  pyproject.toml
django_project/: db.sqlite3
django_project/django_project/: settings.py
